--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,16 @@
         android:theme="@style/Theme.Passkey_project_1"
         tools:targetApi="31">
 
+        <!-- Splash Activity -->
+        <activity
+            android:name=".SplashActivity"
+            android:theme="@style/Theme.Passkey_project_1.NoActionBar"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <!-- MainActivity configuration -->
         <activity
             android:name=".MainActivity"
@@ -40,5 +50,7 @@
             android:theme="@style/zxingTheme"
             tools:replace="android:screenOrientation, android:theme" />
     </application>
+
+
 
 </manifest>
